# configurenv

./: README.md  pyproject.toml
src/: configurenv.py
tests/: test_envsubst.py  test_load.py
tests/test_load/: indexers.json  indexers.yaml
